# Mastering_Infiniband

Chapter1/: client  readme.md  server
SimpleServerClient/: Client.cpp  Server.cpp
ibboilerplate/: .gitignore  CMakeLists.txt  readme.md
ibboilerplate/examples/: CMakeLists.txt
ibboilerplate/examples/gpu_pingpong/: CMakeLists.txt  gpu_pingpong_client.cpp  gpu_pingpong_server.cpp  hip_kernels.hip
ibboilerplate/examples/pingpong/: CMakeLists.txt  pingpong_client.cpp  pingpong_server.cpp
ibboilerplate/include/: rdma_base.h
ibboilerplate/src/: rdma_base.cpp
